# Generative-AI-Powered-Job-Recommender

./: .env  README.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
